# MSS

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cc
config/base/: article_base.yaml  diagnostics_base.yaml  simulation_config_v2.yaml
config/collimator/: article_collimator_profiles.csv  collimator_profiles.csv  collimator_profiles1.csv  collimator_profiles1_copy.csv
config/geometry/: pmma_box.yaml
config/geometry/phantom_yaml_files/: M0.yaml  M1.yaml  M2.yaml  M3.yaml  P0.yaml  P1.yaml  P2.yaml  P3.yaml  P5.yaml
data/: collimator_profiles.csv  simulation_config_v2.yaml  spectrum.csv  vehicle_roi_v03.yaml  vehicle_roi_v04.yaml
docs/: acceptance_checklist.md  architecture.md  article_design.md  article_experiment_automation.md  change.md  decisions.md  diagnostics.md  milestones.md  near_door_experiments.md  pixel_depth_energy_analysis.md  spec.md
docs/archive/v1/: AGENTS.md  acceptance_checklist.md  milestones.md
include/: ActionInitialization.hh  CollimatorBuilder.hh  CollimatorProfileReader.hh  CsvWriter.hh  DetectorConstruction.hh  EventAction.hh  EventRecord.hh  ImagingHeadConstruction.hh  MaterialManager.hh  MetadataWriter.hh  PhaseSpaceCsvWriter.hh  PhysicsList.hh  PoseRunController.hh  PrimaryGeneratorAction.hh  RegionRegistry.hh  RegionResolver.hh  RunAction.hh  RunIdBuilder.hh  ScanPoseManager.hh  SimulationConfig.hh  SimulationConfigReader.hh  SimulationMessenger.hh  SlitCollimatorBuilder.hh  SlitCollimatorProfileReader.hh  SourceModel.hh  SpectrumSampler.hh  SteppingAction.hh  VehicleROIConfig.hh  VehicleROIConfigReader.hh  VehicleROIConstruction.hh  VirtualDetectorPlane.hh  VisualizationController.hh
macros/: run.mac  run_mt.mac  vis.mac
scripts/: analyze_near_door_experiments.py  analyze_pixel_depth_by_bin.py  generate_article_experiment_configs.py  generate_near_door_experiment_configs.py  merge_near_door_seed_events.py  plot_detector_response.py  report_pixel_depth_energy.py  run_experiment_queue.py
scripts/article/: clean_events.py  plot_grid_response.py
scripts/diagnostics/: generate_variants.py  virtual_slit_filter.py
src/: ActionInitialization.cc  CollimatorBuilder.cc  CollimatorProfileReader.cc  CsvWriter.cc  DetectorConstruction.cc  EventAction.cc  ImagingHeadConstruction.cc  MaterialManager.cc  MetadataWriter.cc  PhaseSpaceCsvWriter.cc  PhysicsList.cc  PoseRunController.cc  PrimaryGeneratorAction.cc  RegionRegistry.cc  RegionResolver.cc  RunAction.cc  RunIdBuilder.cc  ScanPoseManager.cc  SimulationConfig.cc  SimulationConfigReader.cc  SimulationMessenger.cc  SlitCollimatorBuilder.cc  SlitCollimatorProfileReader.cc  SourceModel.cc  SpectrumSampler.cc  SteppingAction.cc  VehicleROIConfig.cc  VehicleROIConfigReader.cc  VehicleROIConstruction.cc  VirtualDetectorPlane.cc  VisualizationController.cc
tests/: smoke_diagnostics.py  test_article_clean_events.py  test_article_experiment_configs.py  test_detector_response.py  test_diagnostics.py  test_experiment_queue.py  test_near_door_experiments.py  test_pixel_depth_by_bin.py  test_pixel_depth_energy_report.py
